# callscope

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  launch-ready.yml  release.yml
benchmark/: calls.jsonl
callscope/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  parser.py  signals.py
docs/: BENCHMARK.md  DEMO.md  DISTRIBUTION_AUTOPILOT.md  EXPORTS.md  FINAL_LAUNCH_CHECKLIST.md  GITHUB_SETUP.md  LAUNCH_PACK.md  LAUNCH_POSTS.md  REPO_HEALTH.md  RUNBOOK.md  TROUBLESHOOTING.md  VOICE_AGENT_QA_BENCHMARK.md
examples/: README.md  call_demo_001.json  callback_booking_mix.json  sample_plain.txt  sample_transcripts.jsonl
scripts/: launch_audit.py
tests/: test_callback_booking_mix.py  test_callscope.py
