[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callscope"
version = "0.1.0"
description = "Outcome analytics and quality scoring for AI voice-agent call transcripts (VAPI, Retell, Bland, Twilio, plain text)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Denis Redzic" }]
keywords = [
    "voice-ai",
    "vapi",
    "transcripts",
    "call-analytics",
    "conversation-analysis",
    "cold-calling",
    "speech",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Telephony",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
callscope = "callscope.cli:main"

[project.urls]
Homepage = "https://github.com/redzicdenis08-afk/callscope"
Issues = "https://github.com/redzicdenis08-afk/callscope/issues"

[tool.hatch.build.targets.wheel]
packages = ["callscope"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
